<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cuenta_rl">


    <TextView
        android:id="@+id/txvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/javier_ravines"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/txvEmail"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/jravines_yahoo_com_es"
        app:layout_constraintStart_toStartOf="@+id/txvUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txvUsuario" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usuario" />

    <RadioButton
        android:id="@+id/rbEditar"
        android:layout_width="144dp"
        android:layout_height="30dp"
        android:text="@string/editar_perfil"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <LinearLayout
        android:id="@+id/contenedorAcciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llDireccion"
            style="@style/acciones"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imgDireccion"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:contentDescription="@string/ir_direccion"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/direccion_de_entrega"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgIrDireccion"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/irdireccion"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWishList"
            style="@style/acciones"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imgWishList"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:contentDescription="@string/wishlist"
                app:srcCompat="@drawable/ic_baseline_production_quantity_limits_24" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/wish_list"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgIrWishList"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/wish_list"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHistoriaOrdenes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imgHistoriaOrdenes"
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:contentDescription="@string/historiaordenes"
                app:srcCompat="@drawable/ic_baseline_reorder_24" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/historia_de_ordenes"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgIrHistoriaOrdenes"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/historia_de_ordenes"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSeguimiento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgFollowUp"
                style="@style/Tarjetas"
                android:layout_width="2dp"
                android:background="@drawable/fondo_boton"
                android:contentDescription="@string/followup"
                app:srcCompat="@drawable/ic_baseline_input_24" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:text="@string/seguimiento"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgIrSeguimiento"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/ir_a_seguimiento"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTarjetas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imgTarjetas"
                style="@style/Tarjetas"
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:contentDescription="Tarjetas"
                app:srcCompat="@drawable/ic_baseline_credit_card_24" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="Tarjetas de Crédito"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgIrTarjetas"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/ir_a_tarjetas"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imgNotificaciones"
                android:layout_width="3dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:contentDescription="@string/notificaciones"
                app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

            <TextView
                android:id="@+id/Notificaciones"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/notificaciones"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgIrNotificaciones"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/notificaciones"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>